fix(select): make select work on mobile devices again

--- a/src/components/select/select.scss
+++ b/src/components/select/select.scss
@@ -4,11 +4,9 @@ $mdc-select-fill-color: $mdc-theme-background;
 $mdc-select-bottom-line-idle-color: $lime-text-field-bottom-line-color;
 $mdc-select-bottom-line-hover-color: $lime-text-field-bottom-line-color;
 
-@import "@limetech/mdc-select/mdc-select";
 @import '@limetech/mdc-ripple/mdc-ripple';
 @import "@limetech/mdc-line-ripple/mdc-line-ripple";
 @import "@limetech/mdc-floating-label/mdc-floating-label";
-@import "@limetech/mdc-menu-surface/mdc-menu-surface";
 
 
 :host([hidden]) {
@@ -25,25 +23,6 @@ $mdc-select-bottom-line-hover-color: $lime-text-field-bottom-line-color;
     background-color: transparent;
     white-space: nowrap;
     border-bottom-color: $lime-text-field-bottom-line-color;
-}
-
-.mdc-select {
-    @include mdc-states-hover-opacity(0);
-    @include mdc-states-focus-opacity(0, true);
-    width: 100%;
-
-    &__native-control {
-        padding-top: pxToRem(25);
-        padding-bottom: pxToRem(2);
-        color: transparent !important;
-    }
-
-    .limel-select__selected-text {
-        width: 100%;
-        height: pxToRem(56);
-        position: absolute;
-        z-index: -1;
-    }
 }
 
 .limel-select {
@@ -80,7 +59,7 @@ $mdc-select-bottom-line-hover-color: $lime-text-field-bottom-line-color;
                 background-color: var(--mdc-theme-primary);
             }
 
-            .mdc-select__dropdown-icon {
+            .limel-select__dropdown-icon {
                 transform: rotate(180deg) translateY(pxToRem(-5));
                 color: var(--mdc-theme-primary);
             }
@@ -105,7 +84,7 @@ $mdc-select-bottom-line-hover-color: $lime-text-field-bottom-line-color;
             background-color: var(--mdc-theme-primary);
         }
 
-        .mdc-select__dropdown-icon {
+        .limel-select__dropdown-icon {
             background: url("data:image/svg+xml;charset=utf-8,%3Csvg width='10' height='5' viewBox='7 10 10 5' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' opacity='.54' d='M7 10l5 5 5-5z'/%3E%3C/svg%3E") no-repeat 50%;
         }
     }
@@ -134,4 +113,14 @@ $mdc-select-bottom-line-hover-color: $lime-text-field-bottom-line-color;
             margin-top: pxToRem(-8);
         }
     }
+}
+
+select.limel-select__native-control {
+    top: 0;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    border: 0;
 }
